# cookiecutter-c-project

./: CHANGELOG  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: CHANGELOG  CMakeLists.txt  README.md  {{cookiecutter.project_name}}.1
{{ cookiecutter.project_name }}/src/: {{ cookiecutter.project_name }}.c
